--- a/backend/.travis.yml
+++ b/backend/.travis.yml
@@ -8,11 +8,12 @@ python:
 # Параметры окружения
 env:
   - FLASK_CONFIG=development
-  - FLASK_APP=run.py
+  - FLASK_APP=backend/run.py
 
 # Команда для установки зависимостей в окружение (при этом доступны переменные из секции "env")
 install:
-  - pip install -r requirements.txt --use-mirrors
+  - pip3 install -r backend/requirements.txt
+
 
 # Команда для запуска тестов, в моем случае они запускаются именно так
-script: python multi_sessions/tests.py
+#script: python multi_sessions/tests.py
